--- a/src/website/routes/views/homepage.pug
+++ b/src/website/routes/views/homepage.pug
@@ -1,9 +1,10 @@
 html
+  title Home
   style 
     include style.scss
 body
   include navbar.pug
-  h1(class='titleheader') Hello! these are the devices below!
+  h1(class='title-header') Hello! these are the devices below!
   p(class='paragraph') Devices that we can see 
   table(class='table')
     tr(class='tr')
