--- a/src/website/routes/views/healthcheck.pug
+++ b/src/website/routes/views/healthcheck.pug
@@ -1,11 +1,11 @@
-html 
+html
+  title Health Check
   style 
     include style.scss
 include navbar.pug
 div(class='body-content')
     h1(class='head-top') Welcome to the health check page
-    p(class='paragraph') The health check is displayed below!
-     
+    p(class='paragraph') The health check is displayed below!    
     each check in healthcheck
         ul(class='health-page') uptime: #{check.uptime}
         ul(class='health-page') message: #{check.message} 
