--- a/src/website/routes/views/navbar.pug
+++ b/src/website/routes/views/navbar.pug
@@ -1,4 +1,5 @@
 div(class='navbar')
-    a(href='/') Home Page              
-    a(href='/jobpage') JobPage           
-    a(href='healthcheckpage') Health Check
+    a(class='a-navbar' href='/') Home Page              
+    a(class='a-navbar' href='/jobpage') JobPage           
+    a(class='a-navbar' href='healthcheckpage') Health Check
+    a(class='a-navbar' href='/scanner') Scanner Settings Page   
