--- a/src/website/routes/views/navbar.pug
+++ b/src/website/routes/views/navbar.pug
@@ -1,5 +1,6 @@
 div(class='navbar')
-    a(class='a-navbar' href='/') Home Page              
-    a(class='a-navbar' href='/jobpage') JobPage           
-    a(class='a-navbar' href='healthcheckpage') Health Check
-    a(class='a-navbar' href='/scanner') Scanner Settings Page   
+    a(class='a-navbar' href='/') Home              
+    a(class='a-navbar' href='/jobpage') Jobs           
+    a(class='a-navbar' href='/healthcheckpage') Health Check
+    a(class='a-navbar' href='/scanner') Scanner Settings
+    a(class='a-navbar' href='/password') Create New Password
