--- a/src/website/routes/views/password.pug
+++ b/src/website/routes/views/password.pug
@@ -1,25 +1,24 @@
-html 
-    style
-        include style.scss 
-    
-    body 
-        div(id='userpass')    
-            form(method='POST', action='/password', id='userpass')
-             
-                div 
-                    label(for='originalPassword') Current Password 
-                    input(type='password', id='originalPassword', placeholder='Current Password', name='originalPassword', required)
-                div
-                    label(for='password') Change Password
-                    input(type='password', id='password', placeholder='password', name='password', onchange='validate()', required)
-                div
-                    label(for='confirmPassword') Confirm Password
-                    input(type='password', id='confirmPassword', placeholder='Confirm Password', name='confirmPassword', onchange='validate()', required)
-                div(id='password-match-warning', hidden=true) Password does not match lol :)
-                div(id='password-length-warning', hidden=true) Password has to be more then 8 
-                button.btn.btn-primary(type='submit', id='myButton') Submit
-                   
-               
-
+html
+  title Create New Password
+  style
+    include style.scss
+  head
+    include navbar.pug
+  body(class='background-password')
+    h1(class='head-top') Create New Password
+    div(class='password-head')    
+      form(class='form-password' method='POST', action='/password')
+        div(class='login-div')
+          label(class='paragraph' for='originalPassword') Current Password 
+          input(class='input-login' type='password', id='originalPassword', placeholder='Current Password', name='originalPassword', required)
+        div(class='login-div')
+          label(class='paragraph' for='password') Change Password
+          input(class='input-login' type='password', id='password', placeholder='New Password', name='password', onchange='validate()', required)
+        div(class='login-div')
+          label(class='paragraph' for='confirmPassword') Confirm Password
+          input(class='input-login' type='password', id='confirmPassword', placeholder='Confirm New Password', name='confirmPassword', onchange='validate()', required)
+        div(class='error' id='password-match-warning', hidden=true) Current Password and Confirm Password do not match!
+        div(class='error' id='password-length-warning', hidden=true) Password has to be more than 8 characters long
+        button(class='login-button' logintype='submit', id='myButton') Submit
     script 
         include checker.js
