--- a/src/website/routes/views/style.scss
+++ b/src/website/routes/views/style.scss
@@ -11,6 +11,7 @@
   margin-left: auto;
   margin-right: auto;
   justify-content: center;
+  color: white;
 }
 .paragraph {
   font-family: sans-serif;
@@ -18,16 +19,83 @@
   display: flex;
   margin-bottom: 10px;
 }
-.table,
-.column,
-.table-row,
-.item {
+
+.title {
   font-family: sans-serif;
-  flex-direction: column;
-  border: 1px solid black;
-  left: auto;
-  border-block-end-style: groove;
+  font-weight: 700;
+  color: white;
+  display: flex;
   justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.table {
+  border-collapse: collapse;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  border-radius: 10px;
+}
+
+.table-titles {
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #fff;
+  font-family: sans-serif;
+}
+
+.table-items {
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #fff;
+  font-family: sans-serif;
+  font-weight: lighter;
+}
+
+.thead {
+  background-color: #55608f;
+}
+
+.background {
+  background: linear-gradient(
+    45deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+}
+
+.background-jobs {
+  background: linear-gradient(
+    45deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  height: 98.3%;
+}
+
+.background-health-check {
+  background: linear-gradient(
+    45deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  height: 98.3%;
+}
+
+.background-scanner {
+  background: linear-gradient(
+    to right,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 
 .health-page {
@@ -37,33 +105,32 @@
 .navbar {
   display: flex;
   flex-direction: row;
-  background-color: #0f52ba;
-  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
 }
 
 .a-navbar {
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: none;
-  background-color: #0f52ba;
+  background-color: transparent;
   color: white;
-  border: 2px solid transparent;
+  border-radius: 5px;
 }
 
 .a-navbar:hover {
-  border: 2px solid #0f52ba;
-  background-color: white;
-  color: black;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: white;
 }
 
-.emergencybutton {
+.emergency-button {
   color: red;
   border-radius: 10px;
   height: 90%;
   width: 90%;
 }
 
-.formLogin {
+.form-login {
   padding-left: 60px;
   padding-right: 60px;
   border: 1px solid #ccc;
@@ -74,22 +141,137 @@
   background-color: white;
 }
 
-.loginDiv {
+.form-password {
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-bottom: 20px;
+  border: 1px solid #ccc;
+  height: 500px;
+  width: 300px;
+  border-radius: 5px;
+  box-shadow: 0 0 9px black;
+  background-color: white;
+}
+
+.login-div {
   margin-top: 40px;
 }
 
-.loginLabel {
+.login-label {
   margin-top: 20px;
 }
 
-.scannerDiv {
+.scanner-div {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.scannerColumns {
+.scanner-columns {
   margin-right: 150px;
+}
+
+.scanner-save {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.scanner-buttons {
+  background-color: #24a0ed;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  width: 100px;
+  height: 40px;
+  font-weight: 500;
+}
+
+.delete-button {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
+
+.input-div {
+  display: flex;
+}
+
+.input-field {
+  transition: box-shadow 0.3s;
+  margin-bottom: 10px;
+  width: 300px;
+  margin-right: 5px;
+  border: 1px solid #ccc;
+  padding: 12px 20px;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.background-login {
+  background: linear-gradient(
+    45deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  height: 70%;
+}
+
+.background-password {
+  background: linear-gradient(
+    45deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  height: 98.3%;
+}
+
+.error {
+  font-family: Arial, Helvetica, sans-serif;
+  color: red;
+  margin-top: 5px;
+  font-size: 13px;
+}
+
+.input-login {
+  transition: box-shadow 0.3s;
+  margin-bottom: 10px;
+  margin-right: 5px;
+  border: 1px solid #ccc;
+  padding: 12px 20px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.input-field:hover,
+.input-login:hover {
+  box-shadow: 0 0 5px #888888;
+}
+
+.add-div {
+  padding-bottom: 10px;
+}
+
+.login-button:hover,
+.scanner-buttons:hover {
+  background-color: white;
+  border: 2px solid #24a0ed;
+  color: #24a0ed;
+}
+
+.login-button {
+  background-color: #24a0ed;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  font-weight: bold;
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+  font-size: 15px;
 }
 
 .scannerSave {
@@ -105,12 +287,6 @@
   border-radius: 5px;
   width: 100px;
   height: 40px;
-}
-
-.delete-button {
-  width: 100px;
-  height: 100px;
-  background-color: red;
 }
 
 .inputDiv {
@@ -183,5 +359,11 @@
 .userpass {
   display: flex;
   margin-top: 15%;
+  justify-content: center;
+}
+
+.password-head {
+  display: flex;
+  margin-top: 5%;
   justify-content: center;
 }
