--- a/src/website/routes/views/emergency.pug
+++ b/src/website/routes/views/emergency.pug
@@ -1,5 +1,8 @@
-// TO DO MAKE BUTTON PRESS ACTIVATE ALL TVS
 html 
   style 
     include style.scss
-button(type="submit", class="emergencybutton") 
+  div
+    form(method='POST', action='/emergency')
+      button(type="submit", class="emergency-button")
+
+
