--- a/src/website/routes/views/style.scss
+++ b/src/website/routes/views/style.scss
@@ -126,8 +126,10 @@
 .emergency-button {
   color: red;
   border-radius: 10px;
-  height: 90%;
-  width: 90%;
+  height: 50%;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
 }
 
 .form-login {
