System logs instrumentation

--- a/src/website/routes/views/navbar.pug
+++ b/src/website/routes/views/navbar.pug
@@ -3,4 +3,5 @@ div(class='navbar')
     a(class='a-navbar' href='/jobpage') Jobs           
     a(class='a-navbar' href='/healthcheckpage') Health Check
     a(class='a-navbar' href='/scanner') Scanner Settings
+    a(class='a-navbar' href='/logs') System Logs
     a(class='a-navbar' href='/password') Create New Password
