--- a/src/website/routes/views/navbar.pug
+++ b/src/website/routes/views/navbar.pug
@@ -4,4 +4,5 @@ div(class='navbar')
     a(class='a-navbar' href='/healthcheckpage') Health Check
     a(class='a-navbar' href='/scanner') Scanner Settings
     a(class='a-navbar' href='/logs') System Logs
+    a(class='a-navbar' href='/candidates') Candidates
     a(class='a-navbar' href='/password') Create New Password
