--- a/src/website/routes/views/homepage.pug
+++ b/src/website/routes/views/homepage.pug
@@ -8,9 +8,11 @@ html
     h1(class='title') Devices
     table(class='table')
       tr(class='thead')
-        th(class='table-titles') IP address 
+        th(class='table-titles') Serial 
+        th(class='table-titles') Name
         th(class='table-titles') Status 
       each key in Object.keys(status)
         tr(class='table-tr') 
           th(class='table-items')= key
-          th(class='table-items')= status[key].state
+          th(class='table-items')= status[key].name
+          th(class= status[key].state === 'online' ? 'table-items' : 'table-items table-items__highlight-red')= status[key].state
