--- a/src/website/routes/views/jobpage.pug
+++ b/src/website/routes/views/jobpage.pug
@@ -4,13 +4,27 @@ html
     include style.scss
   head
     include navbar.pug
-  body(class='background-jobs')
+  body(class='background')
     h1(class='title') Jobs
-    table(class='table')
-      tr(class='thead')
-        th(class='table-titles') Job ID 
-        th(class='table-titles') Completed
-      each job in jobs
-        tr(class='table-tr')
-          th(class='table-items')=job.jobId
-          th(class='table-items')=job.hasFinished
+    each job in jobs
+      table(class='table')
+        tr(class='thead')
+          th(class='table-titles') ID
+          th(class='table-titles') Success 
+          th(class='table-titles') IP 
+          th(class='table-titles') Status 
+          th(class='table-titles') Output
+          th(class='table-titles') Completed
+        each jobDetails in job.details
+          tr(class='table-tr')
+            th(class='table-items')=job.jobId
+            th(class='table-items')=jobDetails.success
+            th(class='table-items')=jobDetails.ip
+            th(class='table-items')=jobDetails.message
+            th(class='table-items')=jobDetails.output
+            th(class='table-items')=job.hasFinished
+
+
+
+
+
