--- a/src/website/routes/views/navbar.pug
+++ b/src/website/routes/views/navbar.pug
@@ -6,3 +6,4 @@ div(class='navbar')
     a(class='a-navbar' href='/logs') System Logs
     a(class='a-navbar' href='/candidates') Candidates
     a(class='a-navbar' href='/password') Create New Password
+    a(class='a-navbar' href='/assets') Asset Page
