--- a/src/website/routes/views/scanner.pug
+++ b/src/website/routes/views/scanner.pug
@@ -41,5 +41,5 @@ html
                 each invalidMask in invalidData && invalidData.invalidNetmasks ? invalidData.invalidNetmasks : []
                     p(class='error')= invalidMask
         div(class='scanner-save')
-            button(class='scanner-buttons') Save
+            button(class='scanner-buttons', type='submit') Save
             
