--- a/src/website/routes/views/jobdetails.pug
+++ b/src/website/routes/views/jobdetails.pug
@@ -1,29 +1,28 @@
 html
+  title Post Emergency Page
   style 
     include style.scss
-  body
+  head
     include navbar.pug
-    div(class='body-content')
-      h1(class='head-top') Welcome to the post emergency page
-      p(class='paragraph') hope you didn't die
-    div(class='content')
-      each job in jobs
-        div
-          ul(class='column') JobID #{job.jobId} 
-          ul(class='column')=job.hasFinished
-        table(class='table')
-          tr(class='tr')
-            th(class='item') ip 
-            th(class='item') success 
-            th(class='item') message 
-            th(class='item') output 
-          each jobDetails in job.details
-            tr 
-              th=jobDetails.ip
-              th=jobDetails.success
-              th=jobDetails.message
-              th=jobDetails.output
-  
+  body(class='background')
+    h1(class='title') Post Emergency
+    each job in jobs
+      table(class='table')
+        tr(class='thead')
+          th(class='table-titles') ID
+          th(class='table-titles') Success 
+          th(class='table-titles') IP 
+          th(class='table-titles') Status 
+          th(class='table-titles') Output
+          th(class='table-titles') Completed
+        each jobDetails in job.details
+          tr(class='table-tr')
+            th(class='table-items')=job.jobId
+            th(class='table-items')=jobDetails.success
+            th(class='table-items')=jobDetails.ip
+            th(class='table-items')=jobDetails.message
+            th(class='table-items')=jobDetails.output
+            th(class='table-items')=job.hasFinished
 
 
 
