--- a/src/website/routes/views/style.scss
+++ b/src/website/routes/views/style.scss
@@ -437,3 +437,19 @@
   margin-top: 5%;
   justify-content: center;
 }
+.label {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: red;
+}
+
+.background-assets {
+  color: white;
+}
+.asset-save {
+  color: blue;
+}
+
+.asset-button {
+  color: blue;
+}
