--- a/src/website/routes/views/style.scss
+++ b/src/website/routes/views/style.scss
@@ -537,3 +537,16 @@
 .asset-button {
   color: blue;
 }
+
+.emergency-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.emergency-switch {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
