--- a/src/website/views/assets.pug
+++ b/src/website/views/assets.pug
@@ -3,7 +3,7 @@ html
     style 
         include style.scss
     script 
-        include assets.js
+        include ../scripts/assets.js
     head
         include navbar.pug
     body(class='background-assets')
