--- a/src/website/views/password.pug
+++ b/src/website/views/password.pug
@@ -21,4 +21,4 @@ html
         div(class='error' id='password-length-warning', hidden=true) Password has to be more than 8 characters long
         button(class='login-button' logintype='submit', id='myButton') Submit
     script 
-        include checker.js
+        include ../scripts/change-password.js
