--- a/src/website/views/scanner.pug
+++ b/src/website/views/scanner.pug
@@ -3,7 +3,7 @@ html
     style 
         include style.scss
     script 
-        include scanner.js
+        include ../scripts/scanner.js
     head
         include navbar.pug
     body(class='background-scanner')
