--- a/src/website/views/assets.pug
+++ b/src/website/views/assets.pug
@@ -1,7 +1,7 @@
 html
     title Assets
     style 
-        include style.scss
+        include style.css
     script 
         include ../scripts/assets.js
     head
