--- a/src/website/views/auth.pug
+++ b/src/website/views/auth.pug
@@ -3,7 +3,7 @@ html
     head
         link(href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css')
     style
-        include style.scss
+        include style.css
     div.login-header
         a.a-header(href='/')
             img.logo(src='/images/corpcloud-logo.png')
