--- a/src/website/views/emergency.pug
+++ b/src/website/views/emergency.pug
@@ -1,7 +1,7 @@
 html
   title Emergency
   style 
-    include style.scss
+    include style.css
   head
     include navbar.pug
   body(class='background')
