--- a/src/website/views/healthcheck.pug
+++ b/src/website/views/healthcheck.pug
@@ -1,7 +1,7 @@
 html
   title Health Check
   style 
-    include style.scss
+    include style.css
   head
     include navbar.pug
   body(class='background-health-check')
