--- a/src/website/views/homepage.pug
+++ b/src/website/views/homepage.pug
@@ -1,7 +1,7 @@
 html
   title Home
   style 
-    include style.scss
+    include style.css
   head
     include navbar.pug
   body(class='background')
