--- a/src/website/views/password.pug
+++ b/src/website/views/password.pug
@@ -1,7 +1,7 @@
 html
   title Create New Password
   style
-    include style.scss
+    include style.css
   head
     include navbar.pug
   body(class='background-password')
