--- a/src/website/views/scanner.pug
+++ b/src/website/views/scanner.pug
@@ -1,7 +1,7 @@
 html
     title Scanner
     style 
-        include style.scss
+        include style.css
     script 
         include ../scripts/scanner.js
     head
